objects/maps__LiveEvent__c.object
<CustomObject>
    <fields>
        <fullName>maps__CorrelationId__c</fullName>
        <description>Internal Use</description>
        <inlineHelpText>Internal Use</inlineHelpText>
        <label>Correlation Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__DeviceId__c</fullName>
        <description>Device Involved with Event &amp; Rule</description>
        <inlineHelpText>Device Involved with Event &amp; Rule</inlineHelpText>
        <label>Device Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__EntryDateTime__c</fullName>
        <description>Date &amp; Time of Entry</description>
        <inlineHelpText>Date &amp; Time of Entry</inlineHelpText>
        <label>Entry Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__EntryPosition__c</fullName>
        <description>Location of Entry Position</description>
        <inlineHelpText>Location of Entry Position</inlineHelpText>
        <label>Entry Position</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>maps__ExitDateTime__c</fullName>
        <description>Date &amp; Time of Exit</description>
        <inlineHelpText>Date &amp; Time of Exit</inlineHelpText>
        <label>Exit Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__ExitPosition__c</fullName>
        <description>Location of Exit Position</description>
        <inlineHelpText>Location of Exit Position</inlineHelpText>
        <label>Exit Position</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>maps__LiveAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Live Asset</label>
        <referenceTo>maps__LiveAsset__c</referenceTo>
        <relationshipLabel>Live Events</relationshipLabel>
        <relationshipName>LiveEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__LiveEventType__c</fullName>
        <description>Record Type of Event Created</description>
        <inlineHelpText>Record Type of Event Created</inlineHelpText>
        <label>Live Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enters</fullName>
                </value>
                <value>
                    <fullName>Exits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__LiveIoTDevice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to IoT Device that Created Event</description>
        <inlineHelpText>Lookup to IoT Device that Created Event</inlineHelpText>
        <label>Live IoT Device</label>
        <referenceTo>maps__LiveIoTDevice__c</referenceTo>
        <relationshipLabel>Live Events</relationshipLabel>
        <relationshipName>LiveEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__RuleId__c</fullName>
        <description>External Rule Id</description>
        <inlineHelpText>External Rule Id</inlineHelpText>
        <label>Rule Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__RuleName__c</fullName>
        <description>The name or label for this rule</description>
        <inlineHelpText>The name or label for this rule</inlineHelpText>
        <label>Rule Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__TimeSpentinGeofenceHours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount of time spent within a Geofence in Hours</description>
        <inlineHelpText>Amount of time spent within a Geofence in Hours</inlineHelpText>
        <label>Time Spent in Geofence (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__TimeSpentinGeofenceMinutes__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount of time spent within a Geofence in Minutes</description>
        <inlineHelpText>Amount of time spent within a Geofence in Minutes</inlineHelpText>
        <label>Time Spent in Geofence (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Maps Live Event</label>
    <nameField>
        <displayFormat>LiveEvent-{0000}</displayFormat>
        <label>Maps Live Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maps Live Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>